# hoscomm

app-sdk/: CMakeLists.txt
app-sdk/sender/: CMakeLists.txt
app-sdk/sender/include/: frame_base.h  sender_base.h  sender_strategy_base.h  sender_strategy_zmq.h  video_frame.h  video_frame_sender.h
app-sdk/sender/src/: main.cpp  sender_strategy_zmq.cpp  video_frame_sender.cpp
